# Panaversity-Learn-Agentic-Ai

./: Learn_Low_Code_Agentic_AI_00_Prompt_Engineering.ipynb  README.md
01_Ai_Agents_First/: Agentic.txt  ReadMe.md
01_Ai_Agents_First/01_UV_Project_01 & 02/: .env  app.py  main.py  pyproject.toml
CAARE/: Certified Agentic AI & Robotics Engineer (CAA: Program Guide.md  Certified Agentic AI & Robotics Engineer.md  Certified Agentic AI & Robotics Engineering (CAARE) Program Guide.docx  Exam_05_Level_01.md
Health & Wellness Planner Agent/: Health & Wellness Planner Agent.ipynb  Health Wellness Agent Assignment.docx  Health Wellness Agent.md  agent.py  context.py  health.py  main.py
Topics For Exams/: 01_Tool_Calling.py  01_handoff_obj.py  02_Function_Tool.py  02_handsoff_callbacks.py  03_Agent_As_Tool.py  03_input_filters.py  04_is_enabled.py  Advance_Handoff.py  Agent_Agent Configuration.ipynb  Basic_Syntex_MarkDown_Guide.ipynb  ChainLIt_Streaming.py  Context management.ipynb  Context_Management.py  Guardrails.ipynb  Handoffs.ipynb  Hello_Agent.ipynb  Input.py  MarkDown_Cheat Sheet_Guide.ipynb  OPen AI Agents SDK_Guardrails & Streaming MCQs.ipynb  OPen AI Agents SDK_Guardrails & Streaming MCQs_117.ipynb  Open AI Agents SDK_Hooks & Run Level.ipynb  Open AI Agents SDK_Orchestrating Multiple.ipynb  Open AI_Agents_SDK.ipynb  Open AI_Agents_SDK_Model Settings.ipynb  Open AI_Agents_SDK_Tools.ipynb  Open AI_Agents_SDK_Tracing.ipynb  OpenAI CookBook.ipynb  OpenAI_agents_SDK_World.ipynb  Simple_Handoff.py  Streaming.ipynb  Top P, Top K, temperature, tool choices.ipynb  (+7 more)
(+110 files in other folders)
